Bug 884057 - Fix a memory leak in GLContextProviderGLX: was not destroying pixmaps used for offscreen contexts - r=jgilbert