gfx/gl/GLContextProviderGLX.cpp
@@ -1387,7 +1387,7 @@ DONE_CREATING_PIXMAP:
                                                   display,
                                                   glxpixmap,
                                                   cfgs[chosenIndex],
-                                                  false,
+                                                  true,
                                                   libToUse,
                                                   xsurface);
     }
